@@ -1,3 +1,10 @@
+2002-02-11  Mark McLoughlin  <mark@skynet.ie>
+
+	* panel-applet.c:
+	(panel_applet_handle_background_string): impl method to unify
+	background string parsing.
+	(panel_applet_get_background), (panel_applet_set_prop): use it.
+
 2002-02-09  Mark McLoughlin  <mark@skynet.ie>
 
 	* panel-test-applets.c, panel-test-applets.glade: little applet
